--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -9,13 +9,16 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps: 
+       steps:
       - name: Checkout
         uses: actions/checkout@v3
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
-        with: 
+        with:
           node-version: 16
+          cache: 'npm'
+          cache-dependency-path: '**/package-lock.json'
 
         - name: Install dependencies
           run: npm ci --legacy-peer-deps  
