--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -16,11 +16,17 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16
-          cache: 'npm'
-          cache-dependency-path: '**/package-lock.json'
+      
+      - name: Install dependencies
+          run: npm ci --legacy-peer-deps  
+
+      - name: Build Storybook
+        run: npm run build-storybook
 
       - name: Deploy storybook
-        working-directory: ../../
         run: npm run deploy-storybook -- --ci --existing-output-dir=storybook-static
         env:
           GH_TOKEN: ${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}
+
+
+
