--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -18,7 +18,7 @@ jobs:
           node-version: 16
       
       - name: Install dependencies
-          run: npm ci --legacy-peer-deps  
+          run: npm ci
 
       - name: Build Storybook
         run: npm run build-storybook
